# edges

./: .gitignore  README.md  compile.m  edgeBoxesCanny.m  edgeBoxesCpp.m  edgeBoxesDemo.m  edgeBoxesDemoCanny.m  edgeBoxesEval.m  edge_boxes_mex.mexa64  edgesDetectCanny.m  readme.txt  startup.m  test.mat
cpp/: .gitignore  CMakeLists.txt
cpp/include/: edge_boxes.h  edge_detect.h
cpp/src/: .edge_boxes.cpp.swp  edge_boxes.cpp  edge_boxes_demo.cpp  edge_boxes_eval.cpp  edge_boxes_mat.cpp  edge_boxes_mex.cpp  edge_boxes_python.cpp  edge_boxes_stf.cpp  edge_detect.cpp  edge_nms.cpp  util.cpp
private/: edgeBoxesMex.cpp
